in tei-to-solr.xsl added in to inscription mode template some extra calls to tei-to-solr-common.xsl
git-svn-id: file:///project/repositories/svn2/iospe/trunk@3807 f80ad51f-db79-4307-b24f-aec1c37bd7ba