@@ -1,5 +1,7 @@
 #!/bin/bash
 
-export ANT_OPTS='-XX:PermSize=64m -XX:MaxPermSize=128m -Xmx512m -Dinfo.aduna.platform.appdata.basedir=./webapps/openrdf-sesame/app_dir/ -Dorg.eclipse.jetty.LEVEL=WARN'
+# regular -Xmx value is 1024m, but use at least 5000m for Solr indexing - can do in batches of 200 with that allocation
+
+export ANT_OPTS='-Xmx1024m -Dinfo.aduna.platform.appdata.basedir=./webapps/openrdf-sesame/app_dir/ -Dorg.eclipse.jetty.LEVEL=WARN'
 
 sw/ant/bin/ant -S -f local.build.xml $*
